--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
-body{
-    background-color: aqua;
+header, main ,aside ,footer,nav{
+    background-color: bisque;
+    border: 2px solid slateblue;
+    padding: 5px;
+    border-radius: 10px;
 }
+
