Grid Template Without Responsive

--- a/style.css
+++ b/style.css
@@ -42,5 +42,33 @@ background-color: bisque;
     "nav main main sidebar "
     "nav main main advertise"
     "footer footer footer footer"
-    
+   }
+
+
+
+    @media screen   and (max-width:576px){
+
+
+.container{
+
+    grid-template-areas: 
+    "header"
+    "navbar"
+    "main"
+    "sidebar"
+    "advertisement"
+    "footer"
     ;
+
+        
+    }
+    
+
+    }
+
+  
+
+
+   }
+    
+ 
